tests/snapshots/render__sidebar-next-today-120x40.snap
---
source: tests/render.rs
expression: t.backend()
---
"┌ gensokyo ─────────────┐┌ 1 Reimu · ~/dev/gensokyo ───────────────────────────────────────────────────────────────────┐"
"│1 ○ Reimu              ││line 00                                                                                      │"
"│2 ○ Marisa             ││line 01     ~                                                                                │"
"│3 · Cirno              ││line 02     ~~                                                                               │"
"│                       ││line 03     ~~~                                                                              │"
"│                       ││line 04     ~~~~                                                                             │"
"│                       ││line 05     ~~~~~                                                                            │"
"│                       ││line 06     ~~~~~~                                                                           │"
"│                       ││line 07     ~~~~~~~                                                                          │"
"│                       ││line 08     ~~~~~~~~                                                                         │"
"│                       ││line 09     ~~~~~~~~~                                                                        │"
"│                       ││line 10     ~~~~~~~~~~                                                                       │"
"│                       ││line 11     ~~~~~~~~~~~                                                                      │"
"│                       ││line 12     ~~~~~~~~~~~~                                                                     │"
"│                       ││line 13     ~~~~~~~~~~~~~                                                                    │"
"│                       ││line 14     ~~~~~~~~~~~~~~                                                                   │"
"│                       ││line 15     ~~~~~~~~~~~~~~~                                                                  │"
"│                       ││line 16     ~~~~~~~~~~~~~~~~                                                                 │"
"│                       ││line 17     ~~~~~~~~~~~~~~~~~                                                                │"
"│                       ││line 18     ~~~~~~~~~~~~~~~~~~                                                               │"
"│                       ││line 19     ~~~~~~~~~~~~~~~~~~~                                                              │"
"│                       ││line 20                                                                                      │"
"│                       ││line 21     ~                                                                                │"
"│                       ││line 22     ~~                                                                               │"
"│                       ││line 23     ~~~                                                                              │"
"│                       ││line 24     ~~~~                                                                             │"
"│                       ││line 25     ~~~~~                                                                            │"
"│                       ││line 26     ~~~~~~                                                                           │"
"│                       ││line 27     ~~~~~~~                                                                          │"
"│                       ││line 28     ~~~~~~~~                                                                         │"
"│                       ││line 29     ~~~~~~~~~                                                                        │"
"│                       ││line 30     ~~~~~~~~~~                                                                       │"
"│                       ││line 31     ~~~~~~~~~~~                                                                      │"
"│⏲ evening-notes   23:00││line 32     ~~~~~~~~~~~~                                                                     │"
"│[summon n] [cast c]    ││line 33     ~~~~~~~~~~~~~                                                                    │"
"│[banish b] [recall r]  ││line 34     ~~~~~~~~~~~~~~                                                                   │"
"│[timetable t] [quit q] ││line 35     ~~~~~~~~~~~~~~~                                                                  │"
"│[?]                    ││line 36     ~~~~~~~~~~~~~~~~                                                                 │"
"│[mouse: shrine m]      ││line 37     ~~~~~~~~~~~~~~~~~                                                                │"
"└───────────────────────┘└─────────────────────────────────────────────────────────────────────────────────────────────┘"
