tests/snapshots/render__summon-dir-120x40.snap
---
source: tests/render.rs
expression: t.backend()
---
"┌ gensokyo ─────────────┐┌ 1 Reimu · ~/dev/gensokyo ───────────────────────────────────────────────────────────────────┐"
"│1 ○ Reimu              ││line 00                                                                                      │"
"│2 ○ Marisa             ││line 01     ~                                                                                │"
"│3 · Cirno              ││line 02     ~~                                                                               │"
"│                       ││line 03     ~~~                                                                              │"
"│                       ││line 04     ~~~~                                                                             │"
"│                       ││line 05     ~~~~~                                                                            │"
"│                       ││line 06     ~~~~~~                                                                           │"
"│                       ││line 07     ~~~~~~~                                                                          │"
"│                       ││line 08     ~~~~~~~~                                                                         │"
"│                       ││line 09     ~~~~~~~~~                                                                        │"
"│                       ││line 10     ~~~~~~~~~~                                                                       │"
"│                       ││line 11     ~~~~~~~~~~~                                                                      │"
"│                       ││line 12     ~~~~~~~~~~~~                                                                     │"
"│                       ││line 13     ~~~~~~~~~~~~~                                                                    │"
"│                       ││line 14     ~~~~~~~~~~~~~~┌ summon ──────────────────────────────┐                           │"
"│                       ││line 15     ~~~~~~~~~~~~~~│ Where?                               │                           │"
"│                       ││line 16     ~~~~~~~~~~~~~~│   /Users/someone/dev/sc█             │                           │"
"│                       ││line 17     ~~~~~~~~~~~~~~│ scratch_repo/  scripts/              │                           │"
"│                       ││line 18     ~~~~~~~~~~~~~~│ recent                               │                           │"
"│                       ││line 19     ~~~~~~~~~~~~~~│   ~/dev/gensokyo                     │                           │"
"│                       ││line 20                   │ › ~/dev/scratch_repo                 │                           │"
"│                       ││line 21     ~             │   ~/work/padlet                      │                           │"
"│                       ││line 22     ~~            │ [summon ⏎] [cancel esc]              │                           │"
"│                       ││line 23     ~~~           └──────────────────────────────────────┘                           │"
"│                       ││line 24     ~~~~                                                                             │"
"│                       ││line 25     ~~~~~                                                                            │"
"│                       ││line 26     ~~~~~~                                                                           │"
"│                       ││line 27     ~~~~~~~                                                                          │"
"│                       ││line 28     ~~~~~~~~                                                                         │"
"│                       ││line 29     ~~~~~~~~~                                                                        │"
"│                       ││line 30     ~~~~~~~~~~                                                                       │"
"│                       ││line 31     ~~~~~~~~~~~                                                                      │"
"│                       ││line 32     ~~~~~~~~~~~~                                                                     │"
"│                       ││line 33     ~~~~~~~~~~~~~                                                                    │"
"│                       ││line 34     ~~~~~~~~~~~~~~                                                                   │"
"│[summon n] [banish b]  ││line 35     ~~~~~~~~~~~~~~~                                                                  │"
"│[recall r] [quit q] [?]││line 36     ~~~~~~~~~~~~~~~~                                                                 │"
"│[mouse: shrine m]      ││line 37     ~~~~~~~~~~~~~~~~~                                                                │"
"└───────────────────────┘└─────────────────────────────────────────────────────────────────────────────────────────────┘"
