tests/snapshots/render__summon-dir-80x24.snap
---
source: tests/render.rs
expression: t.backend()
---
"┌ gensokyo ─────────────┐┌ 1 Reimu · ~/dev/gensokyo ───────────────────────────┐"
"│1 ○ Reimu              ││line 00                                              │"
"│2 ○ Marisa             ││line 01     ~                                        │"
"│3 · Cirno              ││line 02     ~~                                       │"
"│                       ││line 03     ~~~                                      │"
"│                       ││line 04     ~~~~                                     │"
"│                       ││line 05     ~~~~~                                    │"
"│                       ││line 0┌ summon ──────────────────────────────┐       │"
"│                       ││line 0│ Where?                               │       │"
"│                       ││line 0│   /Users/someone/dev/sc█             │       │"
"│                       ││line 0│ scratch_repo/  scripts/              │       │"
"│                       ││line 1│ recent                               │       │"
"│                       ││line 1│   ~/dev/gensokyo                     │       │"
"│                       ││line 1│ › ~/dev/scratch_repo                 │       │"
"│                       ││line 1│   ~/work/padlet                      │       │"
"│                       ││line 1│ [summon ⏎] [cancel esc]              │       │"
"│                       ││line 1└──────────────────────────────────────┘       │"
"│                       ││line 16     ~~~~~~~~~~~~~~~~                         │"
"│[summon n] [cast c]    ││line 17     ~~~~~~~~~~~~~~~~~                        │"
"│[banish b] [recall r]  ││line 18     ~~~~~~~~~~~~~~~~~~                       │"
"│[timetable t] [quit q] ││line 19     ~~~~~~~~~~~~~~~~~~~                      │"
"│[?]                    ││line 20                                              │"
"│[mouse: shrine m]      ││line 21     ~                                        │"
"└───────────────────────┘└─────────────────────────────────────────────────────┘"
